fix text going out of container

--- a/src/renderer/index.scss
+++ b/src/renderer/index.scss
@@ -49,3 +49,10 @@
 		}
 	}
 }
+
+.custom-file-label.adjusted {
+	padding-right: 87.83px;
+	overflow: hidden;
+	white-space: nowrap;
+	direction: rtl;
+}
